Reorganize matlab codes

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,12 @@
 old*
 LID*
 dev/
-zirconHfO/data/*/*.pdf
-zirconHfO/data/*/*.xls
-zirconHfO/data/*/*.xlsx
-zirconHfO/data/*/*/*.pdf
-zirconHfO/data/*/*/*.xls
-zirconHfO/data/*/*/*.xlsx
+zirconHfO/datasets/*/*.pdf
+zirconHfO/datasets/*/*.xls
+zirconHfO/datasets/*/*.xlsx
+zirconHfO/datasets/*/*/*.pdf
+zirconHfO/datasets/*/*/*.xls
+zirconHfO/datasets/*/*/*.xlsx
 mczircon.mat
 GreatUnconformityPNAS/
 *.ai
